1.96v

Github changes
https://github.com/LiveHelperChat/livehelperchat/issues/345
https://github.com/LiveHelperChat/livehelperchat/issues/346

execute doc/update_db/update_75.sql for update

1.95v

Mega release.

Sponsored features
1. Browser offers, see site for more information.

Other features
2. Hidden option for department, usefull if you want to have fancy department workflow and let say some department to which chat is transfered you wish were invisible to user.
3. Operator won't see others departments visitors in online visitors. Also updated javascript code generation to have this.
4. Option to close embeded chat if operator has closed it faster then user closed it.

In general these changes
https://github.com/LiveHelperChat/livehelperchat/issues/343
https://github.com/LiveHelperChat/livehelperchat/issues/342
https://github.com/LiveHelperChat/livehelperchat/issues/341

execute doc/update_db/update_74.sql for update

1.94v

Features
1. Option to force department hours to take priority over users online status. "Chat configuration" -> "Misc" -> "Ignore users online statuses and use departments online hours".
2. Option to redirect user to leave a message window manually.

execute doc/update_db/update_73.sql for update

1.93v

Features
1. Job title field for operator, this job title field will be shown instead of "Personal assistant" if it's set.
2. Option to assign pro active invitations to particular users. Just enter users id's separated by comma. Perhaps in some far feature i will add more user friendly assigment workflow, or someone will suport it :)
3. {name},{department},{country},{city} variables in subject for mail "Support request from user"
4. Disabled department widget won't be shown. Option to show widget but then in content will be written "Department is disabled"
5. Invisible mode. This allows to open chat without influencing chat status. To operator has to be assigned "Users, groups management" => "Allow user to change his visibility mode"